--- a/src/app/core/authentication/components/login/login.component.html
+++ b/src/app/core/authentication/components/login/login.component.html
@@ -35,6 +35,6 @@
   </form>
   <div class="sign-up">
     Don't you have an account ?
-    <a [routerLink]="['signup']">Sign up</a>
+    <a [routerLink]="['/register']">Sign up</a>
   </div>
 </div>
