--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+// regular style toast
+@import 'ngx-toastr/toastr';
+.formControl{
+  width:100%
+}
