--- a/src/app/feature/manager/manager.component.html
+++ b/src/app/feature/manager/manager.component.html
@@ -1,1 +1,7 @@
 <p>manager works!</p>
+
+<app-header></app-header>
+<app-sidebar></app-sidebar>
+<div class="main_layout">
+    <router-outlet></router-outlet>
+</div>
