--- a/src/app/shared/components/layout/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/layout/components/sidebar/sidebar.component.html
@@ -1,42 +1,18 @@
-<mat-sidenav-container fullscreen>
-    <mat-sidenav #sidenav  mode="side" class="example-sidenav" [ngStyle]="{ 'width.em': sidenavWidth }" opened="true" (mouseenter)="increase()"
-      (mouseleave)="decrease()">
-      <div class="logomain">Logo Part</div>
-      <mat-nav-list>
-        <mat-list-item (click)="onclick()" routerLink="/user" routerLinkActive="active" >
-          <mat-icon mat-list-icon>person</mat-icon>
-          <div fxFlex="10"></div>
-          <div *ngIf="sidenavWidth > 6" class="sidenav-item">
-            <h5 class="lead">user</h5>
-          </div>
-        </mat-list-item>
-  
-        <mat-list-item routerLink="/manager" routerLinkActive="active">
-          <mat-icon mat-list-icon>Manager</mat-icon>
-          <div fxFlex="10"></div>
-          <div *ngIf="sidenavWidth > 6" class="sidenav-item">
-            <h5 class="lead">Services</h5>
-          </div>
-        </mat-list-item>
-  
-        <mat-list-item routerLink="3" routerLinkActive="active">
-          <mat-icon mat-list-icon>local_phone</mat-icon>
-          <div fxFlex="10"></div>
-          <div *ngIf="sidenavWidth > 6" class="sidenav-item">
-            <h5 class="lead">Contact</h5>
-          </div>
-        </mat-list-item>
-  
-  
-  
-      </mat-nav-list>
-  
-    </mat-sidenav>
-  
-    <div class="example-sidenav-content">
-      <!-- <router-outlet></router-outlet> -->
-      <mat-icon (click)="sidenav.toggle()" class="sidenav-menu">menu</mat-icon>
-    </div>
-  
-  
-  </mat-sidenav-container>
+<mat-nav-list class="sidenav-list">
+  <a mat-list-item routerLink="/user" (click)="onToggleClose()">
+    <mat-icon>input</mat-icon>
+    <span>Login</span>
+  </a>
+  <a mat-list-item routerLink="/user" (click)="onToggleClose()">
+    <mat-icon>account_circle</mat-icon>
+    <span>Userlist</span>
+  </a>
+  <a mat-list-item routerLink="/manager" (click)="onToggleClose()">
+    <mat-icon>hotel</mat-icon>
+    <span>Manager</span>
+  </a>
+  <a mat-list-item routerLink="/offers" (click)="onToggleClose()">
+    <mat-icon>loyalty</mat-icon>
+    <span>Offers</span>
+  </a>
+</mat-nav-list>
