--- a/src/app/feature/user/user.component.html
+++ b/src/app/feature/user/user.component.html
@@ -1,7 +1,2 @@
-<p>user works!</p>
-<p>user works!</p>
-<p>user works!</p>
-<p>user works!</p>
-<p>user works!</p>
-<p>user works!</p>
 
+<app-layout></app-layout>
