--- a/src/app/shared/components/common-table/common-table.component.html
+++ b/src/app/shared/components/common-table/common-table.component.html
@@ -1,12 +1,23 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-        <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-          <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-          <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
-        </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-  
-  
+  <ng-container [matColumnDef]="column" *ngFor="let column of columnHeadings; let i = index">
+    <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element[column] }}
+      <div *ngIf="column == 'actions'" class="action">
+        <div>
+          <mat-icon>visibility</mat-icon>
+        </div>
+        <div (click)="editRow()">
+          <mat-icon>edit</mat-icon>
+        </div>
+        <div (click)="deleteRow(i)">
+          <mat-icon>delete_outline</mat-icon>
+        </div>
+      </div>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columnHeadings"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnHeadings"></tr>
+</table>
