add device token

--- a/src/app/shared/components/layout/components/header/header.component.html
+++ b/src/app/shared/components/layout/components/header/header.component.html
@@ -5,7 +5,7 @@
           <span class="userName"><mat-icon>perm_identity</mat-icon>{{userDetails}}</span>
       </li>
       <li>
-          <span class="logout" (click)="onLogoutClick()"><mat-icon>power_settings_new</mat-icon> Logout </span>
+          <span class="logout" (click)="logout()"><mat-icon>power_settings_new</mat-icon> Logout </span>
       </li>
   </ul>
 </div>
