--- a/src/app/shared/components/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/layout/components/sidebar/sidebar.component.scss
@@ -1,9 +1,17 @@
-.sidenav-list span {
-    padding-left: 8px;
-    background-color: cornsilk;
-  }
-  .sidenav-list{
-    height: 800px;
-    border: 1px solid rgba(0, 0, 0, 0.5);
-  }
+.dashboardMenu {
+    ul {
+        li {
+            a {
+                sup {
+                    font-size: 8px;
+                    text-transform: lowercase;
+                }
+                
+            }
+            a.calender-queue{
+                display: flex !important;
+            }
+        }
+    }
+}
   
