--- a/src/app/shared/components/layout/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/layout/components/sidebar/sidebar.component.html
@@ -2,10 +2,10 @@
   <div class="dashboardWidget">
     <nav class="dashboardMenu">
       <div class="dashboardLogo">
-        <!-- <a [ngClass]="inputIsExpand ? 'showMain' : 'hideMain'" class="mainLogo" (click)="imageClick()"><img
-            src="./assets/img/main-logo.png" alt="Image" /></a>
+        <a [ngClass]="inputIsExpand ? 'showMain' : 'hideMain'" class="mainLogo" (click)="imageClick()"><img
+            src="assets/img/main-logo.png" alt="Image" /></a>
         <a [ngClass]="inputIsExpand ? 'showLogo' : 'hideLogo'" class="mainLogo" (click)="imageClick()"><img
-            src="./assets/img/tab-logo.png" alt="Image" /></a> -->
+            src="assets/img/tab-logo.png" alt="Image" /></a>
       </div>
 
       <!-- Patient Sidebar -->
