add common botton field

--- a/src/app/feature/admin/components/user-list/user-list.component.html
+++ b/src/app/feature/admin/components/user-list/user-list.component.html
@@ -1,1 +1,3 @@
+<app-common-button (click)="openDialog()">Add user</app-common-button>
+
 <app-common-table [columnHeadings]="columnHeadings"></app-common-table>
