--- a/src/app/core/authentication/components/registration/registration.component.html
+++ b/src/app/core/authentication/components/registration/registration.component.html
@@ -47,6 +47,6 @@
   </form>
   <div class="sign-in">
     Already have an account ?
-    <a [routerLink]="['login']">Login</a>
+    <a [routerLink]="['/login']">Login</a>
   </div>
 </div>
