--- a/src/app/core/authentication/components/login/login.component.html
+++ b/src/app/core/authentication/components/login/login.component.html
@@ -3,6 +3,7 @@
   <h1>Login</h1>
   <form [formGroup]="loginForm">
     <mat-form-field appearance="outline">
+      <!-- <mat-icon class="icon">account_box</mat-icon> -->
       <mat-label>E-mail</mat-label>
       <input type="email" matInput formControlName="email" />
       <mat-error
@@ -18,6 +19,7 @@
       </mat-error>
     </mat-form-field>
     <mat-form-field appearance="outline">
+      <!-- <mat-icon class="icon">lock</mat-icon> -->
       <mat-label>Password</mat-label>
       <input
         [type]="showPassword ? 'text' : 'password'"
