Add the assignment

--- a/src/app/shared/components/common-button/common-button.component.html
+++ b/src/app/shared/components/common-button/common-button.component.html
@@ -1,2 +1,3 @@
-<button class="cursor-pointer" mat-raised-button (click)="onButtonClicked()">
+<button mat-raised-button color="primary" [style]="{'min-width': width}" (click)="onButtonClicked()"
+    [disabled]="disabled">
     <ng-content></ng-content> </button>
