--- a/src/app/shared/components/layout/components/header/account-components/account-components.component.html
+++ b/src/app/shared/components/layout/components/header/account-components/account-components.component.html
@@ -2,7 +2,7 @@
     <button mat-button [matMenuTriggerFor]="menu">
       <img
         class="roundedCircle profilePic"
-        src="assets/img/doc-1.jpg"
+        src="../../../../../../../assets/img/doc-1.png"
       />
       Admin
       <i class="fas fa-chevron-down"></i>
