--- a/src/app/shared/components/layout/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/layout/components/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
         <a [ngClass]="inputIsExpand ? 'showMain' : 'hideMain'" class="mainLogo" (click)="imageClick()"><img
             src="assets/img/main-logo.png" alt="Image" /></a>
         <a [ngClass]="inputIsExpand ? 'showLogo' : 'hideLogo'" class="mainLogo" (click)="imageClick()"><img
-            src="assets/img/tab-logo.png" alt="Image" /></a>
+            src="../../../../../../assets/img/main-logo.webp" alt="Image" /></a>
       </div>
 
       <!-- Patient Sidebar -->
@@ -14,17 +14,17 @@
           <a><i class="fas fa-columns"></i><span>Dashboard</span></a>
         </li>
         <li routerLink="consultation" routerLinkActive="active">
-          <a><i class="fas fa-calendar-check"></i><span>Instant GP Consult</span></a>
+          <a><i class="fas fa-calendar-check"></i><span>Admin</span></a>
         </li>
 
-        <li routerLink="dependent-details" routerLinkActive="active">
-          <a><i class="fas fa-users"></i><span >Dependent</span></a>
+        <li routerLink="assignments" routerLinkActive="active">
+          <a><i class="fas fa-users"></i><span >Assignments</span></a>
         </li>
         <li routerLink="book-appointment" routerLinkActive="active">
-          <a><i class="fas fa-calendar-check"></i><span >Book a Specialist</span></a>
+          <a><i class="fas fa-calendar-check"></i><span >User</span></a>
         </li>
         <li routerLink="invoices" routerLinkActive="active">
-          <a><i class="fas fa-file-invoice"></i><span>Invoices</span></a>
+          <a><i class="fas fa-file-invoice"></i><span>Menu</span></a>
         </li>
       </ul>
     </nav>
