--- a/src/app/feature/admin/components/manage-assignment/manage-assignment.component.html
+++ b/src/app/feature/admin/components/manage-assignment/manage-assignment.component.html
@@ -28,16 +28,25 @@
             </div>
             <!-- <div class="formGroup">
                 <div class="formControl">
-                    <label class="fiedLabel">Date<sup>*</sup></label>
-                    <ngx-datepicker class="new-form-field" options="options" placeholder="Datepicker" formControlName="date" name="date"></ngx-datepicker>
+                    <input matInput [matDatepicker]="picker">
+                    <mat-hint>MM/DD/YYYY</mat-hint>
+                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+
                 </div>
             </div> -->
-        
+            <div class="formGroup">
+                <div class="formControl">
+                    <app-common-input [control]="'name'" [type]="'text'" [label]="'Name'" [class]="'formControl'"
+                        [error]="getErrorValidator('name', 'Name')" [form]="assginmentForm"></app-common-input>
+                </div>
+            </div>
             <div class="formGroup fulWidth">
                 <div class="dFlex gap-1 justify-content">
-                    <app-common-button  [width]="'180px'" (click)="AddUser(EdituserData)" [disabled]="showTimer" >Create Assignment</app-common-button>
+                    <app-common-button [width]="'180px'" (click)="AddUser(EdituserData)" [disabled]="showTimer">Create
+                        Assignment</app-common-button>
                     <!-- <r-button [width]="'180px'" (onClick)=" AddUser(EdituserData)" [disabled]="showTimer"> -->
-                        <!-- {{EdituserData ? 'Update User' : 'Add User'}} --> 
+                    <!-- {{EdituserData ? 'Update User' : 'Add User'}} -->
                     <!-- </r-button> -->
                     <!-- <r-button *ngIf="EdituserData" [width]="'180px'" (onClick)=" deleteUser(EdituserData)" [disabled]="showTimer">
                             {{EdituserData.userStatus == '0' ? 'Activate User' : ' Deactivate user'}}
