--- a/src/app/shared/components/layout/components/header/header.component.html
+++ b/src/app/shared/components/layout/components/header/header.component.html
@@ -12,10 +12,8 @@
           </div>
         </div>
         <div class="profileBar">
-          <div class="topNavRight  align-center">
-
-            <app-account-components  [UserDetails]="UserDetails"></app-account-components>
-
+          <div class="topNavRight flex align-center">
+            <app-account-components [UserDetails]="UserDetails"></app-account-components>
           </div>
         </div>
       </div>
