--- a/src/app/shared/components/layout/components/header/account-components/account-components.component.html
+++ b/src/app/shared/components/layout/components/header/account-components/account-components.component.html
@@ -4,7 +4,7 @@
         class="roundedCircle profilePic"
         src="../../../../../../../assets/img/doc-1.png"
       />
-      Admin
+      {{user.name}}
       <i class="fas fa-chevron-down"></i>
     </button>
     <mat-menu #menu="matMenu">
