login issue fixed

--- a/src/app/feature/admin/components/user-list/user-list.component.html
+++ b/src/app/feature/admin/components/user-list/user-list.component.html
@@ -1,3 +1,10 @@
-<app-common-button (click)="openDialog()">Add user</app-common-button>
+<div class="row">
+  <div class="col-md-12 text-end pb-2">
+    <div class="">
+
+      <app-common-button (click)="openUserModal()">Add user</app-common-button>
+    </div>
+  </div>
+</div>
 
 <app-common-table [columnHeadings]="columnHeadings"></app-common-table>
