--- a/src/app/shared/components/layout/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/layout/components/sidebar/sidebar.component.html
@@ -32,7 +32,7 @@
 
       <!-- Admin Sidebar -->
       <ul [ngClass]="inputIsExpand ? 'show-expand' : 'hide-expand'">
-        <li routerLink="/" routerLinkActive="active">
+        <li routerLink="dashboard" routerLinkActive="active">
           <a><i class="fas fa-columns"></i><span *ngIf="inputIsExpand">Dashboard</span></a>
         </li>
     
