--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -52,6 +52,7 @@
       padding: 8px 0px;
     }
     .mainNavbar {
+      width: 100%;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -298,8 +299,13 @@
 .mat-mdc-menu-content {
   padding: 0 !important;
   .listingMenus {
+    padding: 0;
     width: 100%;
+    margin: 0;
+
     li {
+      cursor: pointer;
+      list-style: none;
       border-bottom: 1px solid var(--border-color);
       &:last-child {
         border-bottom: none;
