--- a/src/app/feature/user/components/assignment-table-list/assignment-table-list.component.html
+++ b/src/app/feature/user/components/assignment-table-list/assignment-table-list.component.html
@@ -1,10 +1,17 @@
 <div class="filter">
     <app-common-select
       [label]="'Status Filter'"
-      [control]="'statusfilter'"
-      [form]="statusFilterForm"
-      [List]="filter"
+      [control]="'statusFilter'"
+      [form]="filterForm"
+      [List]="statusFilterList"
       (selectedId)="statusFilter($event)"
     ></app-common-select>
+  <app-common-select
+    [label]="'Priority Filter'"
+    [control]="'priorityFilter'"
+    [form]="filterForm"
+    [List]="priorityFilterList"
+    (selectedId)="priorityFilter($event)"
+  ></app-common-select>
 </div>
 <app-common-table [columnHeadings]="columnHeadings" [dataSource]="dataSource"></app-common-table>
