--- a/src/app/shared/components/common-table/common-table.component.html
+++ b/src/app/shared/components/common-table/common-table.component.html
@@ -1,23 +1,31 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
   <ng-container [matColumnDef]="column" *ngFor="let column of columnHeadings; let i = index">
-    <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
     <td mat-cell *matCellDef="let element">
       {{ element[column] }}
-      <div *ngIf="column == 'actions'" class="action">
-        <div>
+      <div *ngIf="column == 'Actions'" class="action">
+        <div (click)="onViewClick(element)">
           <mat-icon>visibility</mat-icon>
         </div>
-        <div *ngIf="user.role !== 3">
+        <div *ngIf="role !== userRoleConfig.REGULARUSER">
           <mat-icon>edit</mat-icon>
         </div>
-        <div *ngIf="user.role !== 3">
+        <div *ngIf="role !== userRoleConfig.REGULARUSER">
           <mat-icon>delete_outline</mat-icon>
         </div>
       </div>
     </td>
+    <ng-container *ngIf="column == 'Status'" >
+      <th mat-header-cell *matHeaderCellDef>Status</th>
+      <td mat-cell *matCellDef="let element">
+        <app-assignment-status [element]="element"></app-assignment-status>
+      </td>
+    </ng-container>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnHeadings"></tr>
   <tr mat-row *matRowDef="let row; columns: columnHeadings"></tr>
 </table>
+
+
